--- a/home.html
+++ b/home.html
@@ -340,17 +340,17 @@
             <div class="section-header">
               <h2 class="title-24">Популярные модели</h2>
             </div>
-            <div class="tab_wrap">
+            <div class="tab_wrap tab--wrap">
               <div class="tab_wrap__nav">
                 <ul>
-                  <li class="active tab_btn" data-tabs-path="item1"><a href="#">Угловые кухни</a></li>
-                  <li class="tab_btn" data-tabs-path="item2"><a href="#">Прямые кухни</a></li>
-                  <li class="tab_btn" data-tabs-path="item3"><a href="#">Модульные кухни</a></li>
-                  <li class="tab_btn" data-tabs-path="item4"><a href="#">Шкаф-купе</a></li>
+                  <li class="active tab_btn tab--btn" data-tabs-path="item1"><a href="#">Угловые кухни</a></li>
+                  <li class="tab_btn tab--btn" data-tabs-path="item2"><a href="#">Прямые кухни</a></li>
+                  <li class="tab_btn tab--btn" data-tabs-path="item3"><a href="#">Модульные кухни</a></li>
+                  <li class="tab_btn tab--btn" data-tabs-path="item4"><a href="#">Шкаф-купе</a></li>
                 </ul>
               </div>
               <div class="tab_wrap__tabs">
-                <div class="tab_content active" data-tabs-target="item1">
+                <div class="tab_content active tab--content" data-tabs-target="item1">
                   <div class="group-items-3">
                     <div class="item_product">
                       <div class="item_product__top"><img src="./img/models/item1.jpg" alt="image">
@@ -409,7 +409,7 @@
                   </div>
                   <div class="flex flex-center"><a class="item_button_next" href="#">Показать ещё</a></div>
                 </div>
-                <div class="tab_content" data-tabs-target="item2">
+                <div class="tab_content tab--content" data-tabs-target="item2">
                   <div class="group-items-3">
                     <div class="item_product">
                       <div class="item_product__top"><img src="./img/models/item3.jpg" alt="image">
@@ -468,7 +468,7 @@
                   </div>
                   <div class="flex flex-center"><a class="item_button_next" href="#">Показать ещё </a></div>
                 </div>
-                <div class="tab_content" data-tabs-target="item3">
+                <div class="tab_content tab--content" data-tabs-target="item3">
                   <div class="group-items-3">
                     <div class="item_product">
                       <div class="item_product__top"><img src="./img/models/item3.jpg" alt="image">
@@ -527,7 +527,7 @@
                   </div>
                   <div class="flex flex-center"><a class="item_button_next" href="#">Показать ещё </a></div>
                 </div>
-                <div class="tab_content" data-tabs-target="item4">
+                <div class="tab_content tab--content" data-tabs-target="item4">
                   <div class="group-items-3">
                     <div class="item_product">
                       <div class="item_product__top"><img src="./img/models/item3.jpg" alt="image">
